line height fixed to 100% for all h1 titles on mobile devices

--- a/static/styles/jsdoc-default.css
+++ b/static/styles/jsdoc-default.css
@@ -579,9 +579,12 @@ dl.param-type {
     float: left;
   }
 
-  #main h1.page-title {
-    margin: 1em 0;
+  #main h1{    
     line-height: 100%
+  }
+  
+  #main h1.page-title {
+    margin: 1em 0;    
   }
 
   #main section {
